--- a/css/style.css
+++ b/css/style.css
@@ -1109,48 +1109,65 @@ input#get-new, input#privacy-policy{
     max-width: 1200px;
     margin: 0 auto;
     padding: 35px 0;
-    color: #D6C4A5;
+    color: #0C2557;
+    display: flex;
+    gap: 20px;
+    box-sizing: border-box;
 }
-.cart-step{
-    padding-left: 10px;
+
+/* --- 左側 --- */
+/* 商品資訊 */
+.cart-product-info{
+    width: 65%;
+    box-sizing: border-box;
 }
-.cart-step i{
-    padding-right: 15px;
+
+.buy-info h1, .send-info h1{
+    font-size: 20px;
+    font-weight: bold;
+    padding: 1rem;
 }
-.cart-title{
-    border-bottom: 1px solid #D6C4A5;
+.buy-info,.send-info,.buy-details,.cart-login-notice{
+    background-color: #F9F7F3;
+    border: 3px solid #D6C4A5;
+    border-radius: 10px;
 }
-.wrapper-cart table{
-    width: 100%;
+.buy-info{
+    margin-bottom: 20px;
 }
 .cart-title th{
-    width: calc(95% / 7);
-    padding: 20px 0;
-    text-align: center;
-}
-.cart-title th:last-child{
-    width: 5%;
-}
-.cart-content{
+    margin: 20px 0;
     border-bottom: 1px solid #D6C4A5;
 }
 .cart-content td{
-    width: calc(95% / 6);
     padding: 10px 0;
+}
+.cart-title th, .cart-content td {
+    width: calc(90% / 5);
     text-align: center;
     vertical-align: middle;
 }
-.cart-content td img{
-    width: 50%;
-}
-.cart-content td a{
-    color: #D6C4A5;
-}
-.cart-content td:last-child{
+.cart-title th:first-child, .cart-content td:first-child,
+.cart-title th:last-child, .cart-content td:last-child {
     width: 5%;
 }
+.cart-title th:last-child, .cart-content td:last-child{
+    padding-right: 10px;
+}
+.cart-content td img {
+    width: 50%;
+}
+.cart-content td span, .cart-content td a {
+    white-space: nowrap;
+}
+.cart-content td a{
+    color: #0C2557;
+}
+.buy-info input{
+    transform: scale(1.3);
+}
 .cart-number{
-    padding: 0 50px;
+    padding: 0 25px;
 }
 .cart-reduce,.cart-plus{
     display: inline-block;
@@ -1158,42 +1175,122 @@ input#get-new, input#privacy-policy{
     height: 16px;
     cursor: pointer;
 }
-.cart-delete{
-    color: #fff;
+.cart-delete{   
     cursor: pointer;
 }
-.wrapper-cart .cart-total-price{
-    width: 20%;
-    float: right;
-    text-align: right;
+.cart-content:last-child{
+    border-bottom: 1px solid #D6C4A5;
 }
-.cart-total-price td{
-    padding: 5px 20px 5px 0;
+.buy-info p{
+    font-size: 14px;
+    padding: 1rem;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    text-align: justify;
 }
-.cart-total-price tr:first-child td{
-    padding-top: 20px;
+
+/* 寄送資訊 */
+.send-info{
+    display: flex;
+    padding: 1rem;
+    justify-content: space-between;
 }
-.cart-next-step{
+.send-info-left, .send-info-right{
+    width: 50%;
+}
+.send-info-left label{
     display: block;
-    margin: 20px auto;
-    background-color: #D6C4A5;
-    color: #0C2557;
-    width: 200px;
-    height: 48px;
-    border-radius: 3px;
-    text-align: center;
-    line-height: 48px;
+    padding: 15px 0;
+}
+.send-info-left input,.send-info-left select{
+    outline: none;
+    border: 1px solid #0C2557;
+    width: 80%;
+    height: 36px;
+    background-color: transparent;
+    box-sizing: border-box;
+    padding: 0 5px;
+}
+.send-info h1{
+    padding: .5rem 0;
+}
+.send-info-right h2{
+    padding: 1rem 0;
+}
+.send-info-right h2,.send-info-right h3{
+    font-weight: bold;
+}
+.send-info-right h3{
+    font-size: 14px;
+    padding: 12px 0;
+}
+.send-info-right p{
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: justify;
+}
+
+
+/* --- 右側 --- */
+.cart-order-info{
+    width: 35%;
+}
+/* 訂單明細 */
+.buy-details{
+    padding: 10px 30px;
+    margin-bottom: 20px;
+}
+.buy-details h1,.cart-login-notice h1{
+    padding: .5rem 0;
     font-size: 20px;
     font-weight: bold;
-    transition: all .2s ease;
+    white-space: nowrap;
 }
-.cart-next-step:hover{
-    background-color: #F9F7F3;
+.order-item, .order-sale, .order-fare, .order-total, .point-use, .point-count{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 0;
+}
+.point-use, .point-count, .order-point h3{
+    padding: 5px 0;
+}
+.order-point h3{
+    font-weight: bold;
+}
+.order-fare{
+    border-bottom: 1px solid #0C2557;
+}
+.order-point{
+    background-color: #D6C4A5;
+    padding: 10px;
+}
+.buy-details a, .cart-login-notice a{
+    display: block;
+    padding: 10px 0;
+    text-align: center;
+    background-color: #0C2557;
+    color: #F9F7F3;
+    margin: 20px 0;
+}
+/* 還不是會員 */
+.cart-login-notice{
+    padding: 10px 30px;
+}
+.cart-login-notice ul{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.cart-login-notice ul li{
+    line-height: 1.3;
+}
+.cart-login-notice i{
+    font-weight: bold;
 }
 
 /* ---------------- cart2 ----------------*/
 
-.wrapper-cart-contain{
+/* .wrapper-cart-contain{
     width: 100%;
     border-bottom: 1px solid #D6C4A5;
 }
@@ -1206,9 +1303,7 @@ input#get-new, input#privacy-policy{
     width: 90%;
 }
 .order-info label,.receive-info label{
-    /* display: block; */
     padding: 10px 0 10px 70px;
-
     display: flex;
 }
 .receive-info label:nth-of-type(1){
@@ -1257,7 +1352,7 @@ input#same{
 }
 label[for='same']{
     display: inline;
-}
+} */
 
 
 
