--- a/css/style.css
+++ b/css/style.css
@@ -1414,6 +1414,7 @@ input#get-new, input#privacy-policy{
     padding: 50px 0;
     display: flex;
     gap: 20px;
+    align-items: stretch;
 }
 .item-big-img{
     width: 40%;
