字體頁尾調整

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ a{
     text-decoration: none;
 }
 
+*{
+    font-family: Arial, 'Times New Roman', 'Noto Sans TC';
+}
+
 /* ----- header ---- */
 header{
     width: 100%;
