--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ main{
     /* padding-left: 5vw; */
 }
 .guid-tour-bar-center{
-    width: 1200px;
+    max-width: 1200px;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -701,6 +701,17 @@ input#get-new, input#privacy-policy{
     background-position: center center;
     position: relative;
 }
+.member-banner h2{
+    font-size: 48px;
+    font-weight: bold;
+    color: #523112;
+    line-height: 1.5;
+    position: absolute;
+    text-align: center;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .member-banner::before{
     content: '';
     display: block;
@@ -713,7 +724,6 @@ input#get-new, input#privacy-policy{
 }
 .member-banner a{
     display: block;
-    margin: 365px auto 0  ;
     width: 240px;
     height: 48px;
     background-color: #D6C4A5;
@@ -723,7 +733,10 @@ input#get-new, input#privacy-policy{
     line-height: 48px;
     border: 3px solid #0C2557;
     border-radius: 5px;
-    position: relative;
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 3;
 }
 .member-level-introduction{
@@ -754,11 +767,14 @@ input#get-new, input#privacy-policy{
     padding: 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: center;
+    gap: 20px;
     position: relative;
 }
 .memberCard>img{
-    width: 400px;
+    /* width: 400px; */
+    width: calc(100% - 50px);
     position: absolute;
 }
 .memberCard>img:nth-of-type(1){
@@ -777,10 +793,10 @@ input#get-new, input#privacy-policy{
 .cardIntro h3{
     font-size: 22px;
     font-weight: bold;
-    padding: 10px 0;
+    padding: 15px 0 20px 0;
 }
 .cardIntro ul li{
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 .cardImg{
     flex-basis: 35%;
