--- a/css/style.css
+++ b/css/style.css
@@ -759,17 +759,17 @@ input#get-new, input#privacy-policy{
     row-gap: 50px;
 }
 .memberCard{
-    width: 450px;
-    height: 250px;
+    width: 250px;
+    height: 450px;
     box-sizing: border-box;
     background-color: #ececec;
     border-radius: 8px;
-    padding: 2rem;
+    padding: 4rem 2rem;  /* 可能需要改 */
     display: flex;
+    flex-direction: column;
     align-items: center;
     /* justify-content: space-between; */
-    justify-content: center;
-    gap: 20px;
+    /* gap: 20px; */
     position: relative;
 }
 .memberCard>img{
@@ -787,22 +787,27 @@ input#get-new, input#privacy-policy{
     left: 50%;
     transform: translateX(-50%);
 }
-.cardIntro{
-    height: 100%;
-}
 .cardIntro h3{
     font-size: 22px;
     font-weight: bold;
-    padding: 15px 0 20px 0;
+    padding: 20px;
+    text-align: center;
+}
+.cardIntro ul{
+    margin-top: 10px;
+    white-space: nowrap;
 }
 .cardIntro ul li{
     margin-bottom: 10px;
+    font-size: 16px;
 }
 .cardImg{
-    flex-basis: 35%;
+    width: 100%;
 }
 .cardImg img{
-    width: 100%;
+    display: block;
+    margin: 0 auto;
+    width: 60%;
 }
 
 /* ---------------- contact ----------------*/
